--- a/pages/home.html
+++ b/pages/home.html
@@ -1,32 +1,46 @@
-<div class="container-fluid" ng-controller="land">
-    <nav class="d-flex justify-content-between align-items-center flex-wrap border-bottom">
-        <div class="d-flex align-items-start">
-            <p><img src="assets/logo.png" height="100" width="100" alt="image"></p>
-        </div>
-        <div class="d-flex align-items-center justify-content-center flex-wrap gap-4 px-4">
-            <a class="nav-link text-muted fw-semibold" ui-sref="medical">Appointments</a>
-            <a class="nav-link text-muted fw-semibold" ui-sref="profile">Profile</a>
-            <a class="nav-link text-muted fw-semibold" ng-click="logout()">Log Out</a>
+<div class="container-fluid" ng-controller="home">
+    <nav class="navbar navbar-expand-md border-bottom">
+        <div class="container-fluid d-flex justify-content-between align-items-center flex-wrap">
+            <a class="navbar-brand p-0" href="#">
+                <img src="assets/logo.png" height="100" width="100" alt="App Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavContent"
+                aria-controls="navbarNavContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavContent">
+                <ul class="navbar-nav d-flex align-items-center flex-row gap-4 px-4">
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ui-sref="medical">Appointments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ui-sref="profile">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ng-click="logout()">Log Out</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="d-flex align-items-center w-100 justify-content-center">
-        <div class="d-flex flex-column justify-content-center p-3 w-50">
-            <h1 class="display-3 text-dark fw-bold mb-4">
+        <div class="d-flex flex-column justify-content-center">
+            <p class="display-3 text-dark fw-bold mb-4">
                 Total Care , Each Day Each Minute , Each Second , Even Every Moment.
-            </h1>
+            </p>
             <p class="text-muted fw-medium">Living in the moment means letting go of the past and not waiting for the
                 future. It means living your life consciously, aware that each moment you breathe is a gift.”—Oprah
                 Winfrey</p>
             <button type="button" class="btn btn-primary w-50 fw-bold mt-3" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">Book Appointment</button>
         </div>
-        <div class="d-flex justify-content-center align-items-center w-50"><img src="assets/online.png" alt="online"
-                height="600" width="600"></div>
+        <div class="d-none d-lg-flex justify-content-center align-items-center"><img src="assets/online.png"
+                alt="online" height="600" width="600"></div>
     </div>
     <div class="d-flex align-items-center w-100 justify-content-center">
-        <div class="d-flex justify-content-center align-items-center w-50"><img src="assets/couple.jpg" alt="online"
-                height="600" width="600"></div>
-        <div class="d-flex flex-column justify-content-center p-3 w-50">
+        <div class="d-none d-lg-flex justify-content-center align-items-center"><img src="assets/couple.jpg"
+                alt="online" height="600" width="600"></div>
+        <div class="d-flex flex-column justify-content-center p-3">
             <h1 class="display-6 text-dark fw-medium mb-4">
                 About Us
             </h1>
@@ -40,24 +54,27 @@
                 year round.</span>
         </div>
     </div>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Book Appointment (9:00 am to 5:00 pm)</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Book Appointment (9:00 AM to 5:00 PM)</h1>
                 </div>
                 <div class="modal-body">
                     <form ng-submit="submit()" id="Appointment">
                         <div class="w-100 mb-4">
-                            <select class="w-100 form-control" required>
+                            <select class="w-100 form-control" required ng-model="selectedSpecialization">
                                 <option value="">Specialization</option>
-                                <option ng-repeat="spec in specialization">{{spec.name}}</option>
+                                <option ng-repeat="spec in specialization" value="{{spec.name}}">{{spec.name}}
+                                </option>
                             </select>
                         </div>
                         <div class="w-100 mb-4">
                             <select class="w-100 form-control" required name="doctor" ng-model="doctor">
                                 <option value="">Doctor</option>
-                                <option ng-repeat="doc in doctors" value="{{doc.id}}">
+                                <option ng-repeat="doc in doctors | filter: {specializations: selectedSpecialization}"
+                                    value="{{doc.id}}">
                                     {{doc.first_name}}
                                     ({{doc.specializations}})
                                 </option>
@@ -68,17 +85,17 @@
                                 name="dob">
                         </div>
                         <div class="w-100 mb-4">
-                            <input type="time" class="w-100 form-control" ng-model="time" name="time">
+                            <input type="time" class="w-100 form-control" ng-model="time" name="time" min="09:00"
+                                max="17:00">
                         </div>
                         <div class="w-100 mb-3">
                             <textarea type="text" placeholder="Explain problem" required class="form-control"
-                                name="reason_to_visit" pattern="[A-Za-z_ ]{1,50}"
-                                ng-model="reason_to_visit"></textarea>
+                                name="reason_to_visit" pattern="[A-Za-z_ ]{1,50}" ng-model="reason_to_visit"></textarea>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                                 ng-click="clear()">Close</button>
-                            <button type="submit" class="btn btn-primary">Book</button>
+                            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Book</button>
                         </div>
                     </form>
                 </div>
