--- a/pages/medical_history.html
+++ b/pages/medical_history.html
@@ -1,20 +1,32 @@
 <div class="container-fluid" ng-controller="medical">
-    <nav class="d-flex justify-content-between align-items-center flex-wrap py-4 border-bottom">
-        <div class="d-flex flex-column align-items-start">
-            <p>Logo</p>
-        </div>
-        <div class="d-flex align-items-center flex-wrap mt-3">
-            <div class="d-flex align-items-center flex-wrap gap-4">
-                <a class="nav-link text-muted fw-semibold" href="#">Appointments</a>
-                <a class="nav-link text-muted fw-semibold" href="#">Services</a>
-                <a class="nav-link text-muted fw-semibold" href="#">About Us</a>
+    <nav class="navbar navbar-expand-md border-bottom">
+        <div class="container-fluid d-flex justify-content-between align-items-center flex-wrap">
+            <a class="navbar-brand p-0" href="#">
+                <img src="assets/logo.png" height="100" width="100" alt="App Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavContent"
+                aria-controls="navbarNavContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavContent">
+                <ul class="navbar-nav d-flex align-items-center flex-row gap-4 px-4">
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ui-sref="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ui-sref="profile">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ng-click="logout()">Log Out</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
     <div class="container text-center pt-5">
         <div class="d-flex flex-wrap justify-content-center" ng-repeat="appointment in appointments">
             <div class="my-3 p-2 box w-25">
-                <div class="card p-0 d-flex flex-column shadow-lg">
+                <div class="card p-0 d-flex flex-column shadow-sm">
                     <div class="d-flex p-3">
                         <div class="d-flex flex-column text-start">
                             <div class="text-uppercase fs-5 fw-medium mb-1">
@@ -22,22 +34,25 @@
                             </div>
                             <div class="text-muted fw-bold mb-1">{{appointment.specialization}}</div>
                             <div class="text-muted mb-1">
-                                Date: {{appointment.appointment_date}}
+                                <span class="fw-medium text-dark">Date : </span> {{appointment.appointment_date}}
                             </div>
                             <div class="text-muted mb-1">
-                                Time: {{appointment.appointment_time}}
+                                <span class="fw-medium text-dark">Time : </span> {{appointment.appointment_time}}
                             </div>
                             <div class="text-muted mb-1">
-                                Detail: {{appointment.reason_to_vist}}
+                                <span class="fw-medium text-dark">Reason : </span> {{appointment.reason_to_vist}}
                             </div>
-                            <div class="mb-0">
-                                <p>Fee : ₹{{appointment.fees}}</p>
+                            <div class="text-muted mb-1">
+                                <span class="fw-medium text-dark">Status : </span>{{appointment.status}}
+                            </div>
+                            <div class="mb-0 text-muted">
+                                <span class="fw-medium text-dark">Fee : </span> ₹{{appointment.fees}}
                             </div>
                         </div>
                     </div>
                 </div>
                 <div ng-if="appointments.length === 0">
-                        No appointments to display.
+                    No appointments to display.
                 </div>
             </div>
         </div>
