--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,13 +1,25 @@
-<div class="container">
-    <nav class="d-flex justify-content-between align-items-center flex-wrap py-4 border-bottom">
-        <div class="d-flex flex-column align-items-start">
-            <p>Logo</p>
-        </div>
-        <div class="d-flex align-items-center flex-wrap mt-3">
-            <div class="d-flex align-items-center flex-wrap gap-4">
-                <a class="nav-link text-muted fw-semibold" href="#">Appointments</a>
-                <a class="nav-link text-muted fw-semibold" href="#">Services</a>
-                <a class="nav-link text-muted fw-semibold" href="#">About Us</a>
+<div class="container-fluid">
+    <nav class="navbar navbar-expand-md border-bottom">
+        <div class="container-fluid d-flex justify-content-between align-items-center flex-wrap">
+            <a class="navbar-brand p-0" href="#">
+                <img src="assets/logo.png" height="100" width="100" alt="App Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavContent"
+                aria-controls="navbarNavContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavContent">
+                <ul class="navbar-nav d-flex align-items-center flex-row gap-4 px-4">
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ui-sref="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ui-sref="medical">Appointments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted fw-semibold" ng-click="logout()">Log Out</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
