--- a/pages/signup_doctor.html
+++ b/pages/signup_doctor.html
@@ -5,7 +5,7 @@
     <div class="p-5 h-100 d-flex justify-content-center flex-column">
         <form class="vh-100 w-100 d-flex flex-column justify-content-center" ng-submit="submit()" id="form">
             <h1>Sign Up</h1>
-            <p class="mb-4">Already have an account ? <span ui-sref="signin">Sign In</span></p>
+            <p class="mb-4 small">Already have an account ? <span ui-sref="signin" class="text-primary">Sign In</span></p>
             <div class="d-flex w-100 mb-4 gap-4">
                 <div class="w-50">
                     <input type="text" placeholder="First Name" required name="first_name"
@@ -44,7 +44,7 @@
                     </select>
                 </div>
                 <div class="w-50">
-                    <input type="file" required name="photo" class="form-control rounded-5 bg-none">
+                    <input type="file" required name="photo" class="form-control rounded-5 bg-none" accept="image/png, image/jpeg ,image/jpg">
                 </div>
             </div>
             <div class="d-flex w-100 mb-4 gap-4">
@@ -71,15 +71,22 @@
                         class="form-control rounded-5" pattern="[0-9]{0,2}" minlength="1" maxlength="2">
                 </div>
             </div>
-            <div class="d-flex w-100 mb-4 gap-4">
-                <div class="w-50">
-                    <input type="password" placeholder="Password" required class="form-control rounded-5"
-                        name="password" ng-model="password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+            <div class="d-flex w-100 gap-4">
+                <div class="w-50 mb-4 form-control rounded-5 d-flex">
+                    <input ng-attr-type="{{input_type}}" type="password" placeholder="Password" required
+                        ng-model="password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+                    <div ng-click="toggle()">
+                        <span ng-if="input_type == 'password'"><i class="ri-eye-off-line"></i></span>
+                        <span ng-if="input_type != 'password'"><i class="ri-eye-line"></i></span>
+                    </div>
                 </div>
-                <div class="w-50">
-                    <input type="password" placeholder="Confirm Password" required class="form-control rounded-5"
-                        ng-model="confirm_password" name="confirm_password"
-                        pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+                <div class="w-50 mb-4 form-control rounded-5 d-flex">
+                    <input ng-attr-type="{{input_type}}" type="password" placeholder="Confirm Password" required
+                        name="confirm_password" ng-model="confirm_password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+                    <div ng-click="toggle()">
+                        <span ng-if="input_type == 'password'"><i class="ri-eye-off-line"></i></span>
+                        <span ng-if="input_type != 'password'"><i class="ri-eye-line"></i></span>
+                    </div>
                 </div>
             </div>
             <button class="btn btn-primary w-100 rounded-5 border-0 fw-bold" id="singup" type="submit">Sign Up</button>
