--- a/pages/signup_patient.html
+++ b/pages/signup_patient.html
@@ -46,7 +46,7 @@
                     </select>
                 </div>
                 <div class="w-50">
-                    <input type="file" required name="photo" class="form-control rounded-5 bg-none">
+                    <input type="file" required name="photo" class="form-control rounded-5 bg-none" accept="image/png, image/jpeg ,image/jpg">
                 </div>
             </div>
             <div class="d-flex w-100 mb-4 gap-4">
@@ -69,15 +69,22 @@
                         pattern="[0-9]{1,3}" maxlength="3" minlength="1">
                 </div>
             </div>
-            <div class="d-flex w-100 mb-4 gap-4">
-                <div class="w-50">
-                    <input type="password" placeholder="Password" required class="form-control rounded-5"
-                        name="password" ng-model="password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+            <div class="d-flex w-100 gap-4">
+                <div class="w-50 mb-4 form-control rounded-5 d-flex">
+                    <input ng-attr-type="{{input_type}}" type="password" placeholder="Password" required
+                        ng-model="password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+                    <div ng-click="toggle()">
+                        <span ng-if="input_type == 'password'"><i class="ri-eye-off-line"></i></span>
+                        <span ng-if="input_type != 'password'"><i class="ri-eye-line"></i></span>
+                    </div>
                 </div>
-                <div class="w-50">
-                    <input type="password" placeholder="Confirm Password" required class="form-control rounded-5"
-                        name="confirm_password" ng-model="confirm_password"
-                        pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+                <div class="w-50 mb-4 form-control rounded-5 d-flex">
+                    <input ng-attr-type="{{input_type}}" type="password" placeholder="Confirm Password" required
+                        name="confirm_password" ng-model="confirm_password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,16}">
+                    <div ng-click="toggle()">
+                        <span ng-if="input_type == 'password'"><i class="ri-eye-off-line"></i></span>
+                        <span ng-if="input_type != 'password'"><i class="ri-eye-line"></i></span>
+                    </div>
                 </div>
             </div>
             <button class="btn btn-primary w-100 rounded-5 border-0 fw-bold" id="singup_" type="submit">Sign Up</button>
